<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/allSongs"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:background="@color/all_songs"
            android:gravity="center"
            android:text="@string/all_songs" />

        <TextView
            android:id="@+id/albums"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:background="@color/albums"
            android:gravity="center"
            android:text="@string/albums" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/payments"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:background="@color/payments"
            android:gravity="center"
            android:text="@string/payments" />

        <TextView
            android:id="@+id/search_music"
            style="@style/CategoryStyle"
            android:layout_weight="1"
            android:background="@color/search_music"
            android:gravity="center"
            android:text="@string/search_music" />
    </LinearLayout>

</LinearLayout>